# gpt2-mechanics

./: pyproject.toml
docs/: induction_metrics.md
notebooks/: duplicate_head.ipynb  induction.ipynb  logit_lens.ipynb
src/: __init__.py
src/core/: __init__.py
src/core/duplicate/: __init__.py  utils.py  visualization.py
src/core/induction/: __init__.py  utils.py  visualization.py
src/core/logit_lens/: __init__.py  utils.py  visualization.py
src/data/: __init__.py  duplicate_token_data.py  induction_data.py
