[project]
name = "gpt2-mechanics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "circuitsvis>=1.43,<2",
    "datasets>=2.20,<4",
    "ipykernel>=6.29,<7",
    "ipython>=8.38,<10",
    "ipywidgets>=8.1,<9",
    "pandas>=2.2,<3",
    "pyarrow>=15,<20",
    "torch>=2.4,<2.7",
    "transformer-lens>=3.1.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
